--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@marp-team/marp-cli": "^4.2.3",
     "markdown-it-mathjax3": "^4.3.2",
     "vitepress": "^1.6.3"
   },
